# rusty-mempalace

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  README.md  migrate_claude_memory.py
cli/: Cargo.toml
cli/src/: init.rs  main.rs  mcp_main.rs  mine.rs  ops.rs  setup.rs  token.rs
core/: Cargo.toml
core/src/: access.rs  budget.rs  config.rs  db.rs  entropy.rs  knapsack.rs  lib.rs  lsh.rs  models.rs  palace.rs  search.rs  storage.rs
examples/: langgraph_example.py
gemma/: Cargo.toml
gemma/src/: anthropic.rs  compressor.rs  config.rs  lib.rs  ollama.rs  openai.rs
langgraph/: pyproject.toml
langgraph/tests/: test_nodes.py
langgraph/yourmemory_langgraph/: __init__.py  client.py  nodes.py  state.py
mcp/: Cargo.toml
mcp/src/: lib.rs  main.rs  promotion.rs  protocol.rs
mcp/src/tools/: kg.rs  maintenance.rs  meta.rs  mod.rs  read.rs  structure.rs  write.rs
server/: Cargo.toml
server/src/: api.rs  auth.rs  error.rs  lib.rs
server/static/: admin.js  app.js  audit.js  graph.js  heatmap.js  index.html  probe.js  rooms.js  sessions.js  style.css
server/tests/: scoping.rs
