[package]
name = "yourmemory"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "yourmemory"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
yourmemory-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
rayon = "1"
walkdir = "2"
dirs = "5"
