[package]
name = "yourmemory-gemma"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
toml = "0.8"
thiserror = "1"

[dev-dependencies]
mockito = "1"
wiremock = "0.6"
tokio = { workspace = true }
