[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yourmemory-langgraph"
version = "0.1.0"
description = "LangGraph integration nodes for the yourmemory MCP server"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "langgraph>=0.2",
    "mcp>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-asyncio>=0.23"]

[tool.setuptools.packages.find]
where = ["."]
include = ["yourmemory_langgraph*"]
