[package]
name = "yourmemory-mcp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "yourmemory-mcp"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["io-util", "macros"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
yourmemory-core = { path = "../core" }
yourmemory-gemma = { path = "../gemma" }
